# letsFS

./: .gitignore  .mcp.json  AGENTS.md  Dockerfile  README.md  docker-compose.yml  mcp-config.json
.github/workflows/: ci.yml
docs/: index.md
sdk/mcp/: package-lock.json  package.json
sdk/mcp/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/letsfs/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py
sdk/python/tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_live.py  test_models.py
skills/hotel-search/: SKILL.md
